--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,7 +24,7 @@ h1,h2 {
 .top-hero-wrapper{
   width: 100vw;
   height: 100vh;
-  background-image: url('bg-top.png');
+  background-image: image-url('bg-top.png');
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -42,5 +42,28 @@ h1,h2 {
   
   h2{
     margin-bottom: 60px;
+  }
+}
+
+.form-control{
+  height: 45px;
+}
+
+.user-new-wrapper{
+  width: 100vw;
+  height: 100vh;
+  background-image: image-url('bg-top.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+  
+  .users-new-container{
+    padding-top: 220px;
+    
+    .form-group{
+      margin-bottom: 20px;
+    }
   }
 }
