--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -10,7 +10,19 @@
           </h2>
           
           <%= image_tag topic.image.url %>
+          <% if !topic.favorite_users.include?(current_user) %>
+          <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
           <%= image_tag 'icons/heart-black.png', class: 'topic-index-icon' %>
+          <% end %>
+          
+          <% else %>
+          <%= image_tag 'icons/filled-heart.png', class: 'topic-index-icon' %>
+          <% end %>
+          
+          <span>
+            <%= Favorite.where(topic_id: topic.id).count %>
+          </span>
+          
           <%= image_tag 'icons/comment.png', class:'topic-index-icon' %>
           <p class="topic-text">
             <%= topic.description %>
