--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -145,3 +145,14 @@ img{
     
   }
 }
+
+span.blank-heart{
+  padding-left:20px;
+  font-size:40px;
+}
+
+span.filled-heart{
+  color:000000;
+  padding-left:20px;
+  font-size:40px;
+}
