--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="topic-index-wrapper">
   <dic class="container">
-    <% @favortite_topics.each do |topic| %>
+    <% @favorite_topics.each do |topic| %>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
@@ -10,6 +10,23 @@
           </h2>
           
           <%= image_tag topic.image.url %>
+          
+          <% if !topic.favorite_users.include?(current_user) %>
+          <%= link_to favorites_path(topic_id: topic.id), method: :post do %>
+          <span class="blank-heart">&#9825;</span>
+          <% end %>
+          
+          <% else %>
+
+           <%= link_to favorites_path(topic_id: topic.id), method: :delete do %>
+          <span class="filled-heart">&#9829;</span>
+          <% end %>
+          
+          <% end %>
+          
+          <span>
+            <%= Favorite.where(topic_id: topic.id).count %>
+          </span>
           <%= image_tag 'icons/comment.png', class: 'topic-index-icon' %>
           <p class="topic-text">
             <%= topic.description %>
