--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <% if logged_in? %>
             
             <li>
-             <%= link_to 'favorites_index_path' do %>
+             <%= link_to favorites_index_path do %>
              <%= image_tag "icons/heart.png" %>
              <% end %>
             </li>
