--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -27,7 +27,10 @@
             <%= topic.favorites.count %>
           </span>
           
+          <%= link_to comments_path(user_id: current_user.id, topic_id: topic.id), method: :get do %>
           <%= image_tag 'icons/comment.png', class:'topic-index-icon' %>
+          <% end %>
+          
           <p class="topic-text">
             <%= topic.description %>
           </p>
