コメント機能実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,3 +156,13 @@ span.filled-heart{
   padding-left:20px;
   font-size:40px;
 }
+
+.comment-title{
+  font-size:20px;
+  padding-left:20px;
+}
+
+.comment{
+  padding-top:10px;
+  padding-left:20px;
+}
