--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -5,10 +5,10 @@
       <div class="col-md-6 col-md-offset-3">
         <div class="topic-index-single">
           <h2 class="topic-author">
-            <%= @topic.user.name %>
+            <%= @comment.topic.user.name %>
           </h2>
           
-          <%= image_tag @topic.image.url %>
+          <%= image_tag @comment.topic.image.url %>
           
           <%= form_for @comment do |f| %>
           <div class="form-group">
@@ -16,7 +16,11 @@
             <%= f.text_area :comment, class: 'form-control' %>
           </div>
           
-          <%= f.submit "コメント", class: 'btn-block' %>
+          <div class="form-group">
+            <%= f.hidden_field :topic_id, value: @comment.topic_id %>
+          </div>
+          
+          <%= f.submit "コメント", class: 'btn-block btn-black' %>
           <% end %>
           
           
