--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -35,6 +35,13 @@
             <%= topic.description %>
           </p>
           
+          <div class="comment-title">コメント</div>
+          <% topic.comments.each do |c| %>
+          <div class="comment">
+          <%= c.comment %>
+          </div>
+          <% end %>
+          
           
         </div>
       </div>
